--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?bojwqb');
-  src:  url('fonts/icomoon.eot?bojwqb#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?bojwqb') format('truetype'),
-    url('fonts/icomoon.woff?bojwqb') format('woff'),
-    url('fonts/icomoon.svg?bojwqb#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?2yqo3z');
+  src:  url('fonts/icomoon.eot?2yqo3z#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?2yqo3z') format('truetype'),
+    url('fonts/icomoon.woff?2yqo3z') format('woff'),
+    url('fonts/icomoon.svg?2yqo3z#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-up:before {
+  content: "\e90c";
+}
 .icon-phone:before {
   content: "\e900";
 }
